feat: create single rollup.config that only checks for environment - update version on package and license scripts - clean dist folder for prepublish

--- a/.npmignore
+++ b/.npmignore
@@ -2,12 +2,7 @@ node_modules/
 *.sublime-project
 *.sublime-workspace
 docs/
-dist/api/
-dist/core/
-dist/internal/
-dist/system/
-dist/util/
-dist/window/
+dist/
 defs/
 modules/
 src/
